spacing issues

--- a/assets/css/colors-dark.css
+++ b/assets/css/colors-dark.css
@@ -5,7 +5,7 @@ html, body {
 
 article {
     background-color: #073642;
-    padding: 20px 20px 20px 20px;
+    padding: 9px 15px 1px 15px;
 }
 
 a, a:visited, a:active {
