--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,7 @@ dd {
 
 /*** Posts ***/
 article {
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 }
 
 article h1 {
